tests/fixtures/fail/result_requires_explicit_constructor.sc
let wrong(): Result(i32, bool) = 42

let main(): i32 = 42
